// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-view-engine Rendering 1`] = `
"<!DOCTYPE html>
<html lang=\\"de\\">
  <head>
    <style>
      h1{color:red}
    </style>
    <meta charset=\\"UTF-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Test</title>
  </head>
  <body>
    <h1>Test</h1>
    <p>Some component:</p>
    Hello from MyComponent! Provided prop:
    <figure><pre>&quot;foo&quot;</pre></figure>
    <hr />
    <figure>
      <figcaption>props:</figcaption>
      <pre>
{
  &quot;title&quot;: &quot;Test&quot;,
  &quot;lang&quot;: &quot;de&quot;
}</pre
      >
    </figure>
    <hr />
    <figure>
      <figcaption>context1:</figcaption>
      <pre>
{
  &quot;id&quot;: 1,
  &quot;name&quot;: &quot;test&quot;
}</pre
      >
    </figure>
    <hr />
    <figure>
      <figcaption>context2:</figcaption>
      <pre>
{
  &quot;someProperty&quot;: &quot;mausi&quot;
}</pre
      >
    </figure>
  </body>
</html>
"
`;

exports[`react-view-engine Rendering with locals 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <style>
      h1{color:red}
    </style>
    <meta charset=\\"UTF-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>from locals</title>
  </head>
  <body>
    <h1>from locals</h1>
    <p>Some component:</p>
    Hello from MyComponent! Provided prop:
    <figure><pre>&quot;foo&quot;</pre></figure>
    <hr />
    <figure>
      <figcaption>props:</figcaption>
      <pre>
{
  &quot;title&quot;: &quot;from locals&quot;
}</pre
      >
    </figure>
    <hr />
    <figure>
      <figcaption>context1:</figcaption>
      <pre>
{
  &quot;id&quot;: 1,
  &quot;name&quot;: &quot;test&quot;
}</pre
      >
    </figure>
    <hr />
    <figure>
      <figcaption>context2:</figcaption>
      <pre>
{
  &quot;someProperty&quot;: &quot;mausi&quot;
}</pre
      >
    </figure>
  </body>
</html>
"
`;
